--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Inidan Chicken curry</h1>
+    <h1>Indian Chicken curry</h1>
     <img src="../images/chickencurry.webp" alt="Chicken curry white rice served in a small green patterned ceramic bowl with wooden spoons around" height="400" width="450">
     <h2>Description</h2>
     <p>Chicken curry or curry/curried chicken is a South Asian dish originating from the Indian subcontinent. It is common in the cuisine of the Indian subcontinent, Caribbean, Southeast Asia, Great Britain, and South Africa. A typical curry from the Indian subcontinent consists of chicken stewed in an onion- and tomato-based sauce, flavoured with ginger, garlic, tomato puree, chilli peppers and a variety of spices, often including turmeric, cumin, coriander, cinnamon, and cardamom. Outside of South Asia, chicken curry is often made with a pre-made spice mixture known as curry powder.</p>
