--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
-        <li><a href="./recipes/naan.html">naan</a></li>
+        <li><a href="./recipes/naan.html">Naan</a></li>
     </ul>
     
 </body>
